--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Document:
 # http://simiki.org/docs/configuration.html
 
-url: http://xuxuehua.com
-title: XuXuehua.com
-keywords: XuXuehua.com
-description: Personal Wiki page
-author: XuXuehua
+url: 
+title: 
+keywords: 
+description: 
+author: 
