--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,22 @@
 # Document:
 # http://simiki.org/docs/configuration.html
 
-url: 
-title: 
-keywords: 
-description: 
-author: 
+url: http://XuXuehua.com
+title: Xu Xuehua
+keywords: Xu Xuehua
+description: Xu Xuehua's public notebooks
+author: Xu Xuehua
+
+root: /
+source: content
+destination: output
+themes_dir: themes
+theme: cod
+
+category:
+  - name: Linux  # 目录名
+    label: Linux/运维  # 目录的别名, 生成首页时可以使用
+
+default_ext: md
+pygments: true
+debug: false
