--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Document:
 # http://simiki.org/docs/configuration.html
 
-url: http://XuXuehua.com
-title: Xu Xuehua
-keywords: Xu Xuehua
-description: Xu Xuehua's public notebooks
-author: Xu Xuehua
+url: http://XuXueHua.com
+title: Xu XueHua
+keywords: Xu XueHua
+description: Xu XueHua's public notebooks
+author: Xu XueHua
 
 root: /
 source: content
