--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 url: http://XuXueHua.com
 title: Xu XueHua
 keywords: Xu XueHua
-description: Xu XueHua's public notebooks
+description: Xu XueHua's public notes
 author: Xu XueHua
 
 root: /
@@ -15,7 +15,7 @@ theme: simple2
 
 category:
   - name: Linux  # 目录名
-    label: Linux/运维  # 目录的别名, 生成首页时可以使用
+    label: Linux运维  # 目录的别名, 生成首页时可以使用
 
 default_ext: md
 pygments: true
